--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Colmar Academy</title>
+        <link rel="stylesheet" href="resources/css/style.css">
     </head>
     <body>
         <nav>
-            <img src="./resources/images/ic-logo.svg">
-            <h1><span>COLMAR</span><span>ACADEMY</span></h1>
             <div>
-                <ul>
+                <img src="./resources/images/ic-logo.svg" class="left">
+                <h1 class="left"><span class="bold">COLMAR</span><span class="thin">ACADEMY</span></h1>
+            </div>
+            <div class="right">
+                <ul class="right">
                     <li>On campus</li>
                     <li>Online</li>
                     <li>For companies</li>
