--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </nav>
 
-        <div>
+        <div class="container">
             <div>
                 <img src="resources/images/banner.jpg" alt="">
             </div>
@@ -36,7 +36,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="container">
             <div>
                 <img src="resources/images/information-main.jpg" alt="">
                 <h1>It doesn't hurt to keep practicing</h1>
@@ -77,7 +77,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="container">
             <h1>Start learning</h1>
             <div>
                 <div>
@@ -119,7 +119,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="container">
             <h1>Thesis exhibit</h1>
             <div>
                 <video controls>
@@ -150,7 +150,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="container">
             <p>&copy;2016 Colmar Academy. All rights reserved</p>
             <ul>
                 <li><a href="#">Terms</a></li>
